--- a/个人画像接口.md
+++ b/个人画像接口.md
@@ -46,14 +46,35 @@
    }
    ```
 
+3.贷款信息
+   ```
+   http://localhost:port/loanInfo
+   method: POST
+   data: {"id": ****}
    
+   return: {
+   	"data": {
+   		"loan_amnt": "",
+		"term": "",
+		"int_rate": "",
+		"installment": "",
+		"dti": "",
+		"loan_status": "",
+		"purpose": "",
+		"revol_bal": "",
+        "total_pymnt": "",
+		"issue_d": ""
+   	},
+   	"status": 200(normal)/404(no such user)
+   }
+   ```
 
-3. 贷款信息
+3. 违约信息
 
    过去两年逾期30天以上次数（delinq_2yrs），借款人公共事业记录差评的次数（peb_rec），总负债金额（all_util），尚未结清金额（revol_bal），负债比（dti），借款⼈现在拖⽋的账户的逾期欠款（delinq_amnt），借款⼈正在拖⽋的账户数量 （acc_now_delinq），借款状态(loan_status)
 
    ```
-   http://localhost:port/loanInfo
+   http://localhost:port/loanDefault
    method: POST
    data: {"id": ****}
    
